--- a/package.json
+++ b/package.json
@@ -25,38 +25,39 @@
     "@types/node": "12.12.6"
   },
   "devDependencies": {
-    "@xpda-dev/core": "^0.1.5",
-    "@xpda-dev/electron-launcher": "^0.1.1",
-    "@xpda-dev/electron-builder": "^0.1.1",
-    "@xpda-dev/webpack-step": "^0.1.2",
-    "deepmerge": "4.2.2",
     "@fortawesome/fontawesome-free": "5.12.1",
+    "@nuxtjs/eslint-config": "1.1.2",
+    "@types/webdriverio": "4.13.3",
+    "@vue/test-utils": "1.0.0-beta.32",
+    "@xpda-dev/core": "^0.1.5",
+    "@xpda-dev/electron-builder": "^0.1.1",
+    "@xpda-dev/electron-launcher": "^0.1.1",
+    "@xpda-dev/webpack-step": "^0.1.2",
     "ava": "2.4.0",
+    "babel-eslint": "10.1.0",
+    "babel-plugin-webpack-alias-7": "0.1.1",
     "browser-env": "3.3.0",
     "cross-env": "7.0.2",
+    "deepmerge": "4.2.2",
     "electron": "8.1.1",
     "electron-builder": "22.4.1",
     "electron-debug": "3.0.1",
     "eslint": "5.16.0",
-    "babel-eslint": "10.1.0",
     "eslint-friendly-formatter": "4.0.1",
     "eslint-loader": "3.0.3",
-    "@nuxtjs/eslint-config": "1.1.2",
-    "nuxt": "2.11.0",
     "node-sass": "4.13.1",
-    "sass-loader": "8.0.2",
-    "spectron": "10.0.1",
-    "@types/webdriverio": "4.13.3",
-    "vue-devtools": "5.1.3",
-    "@vue/test-utils": "1.0.0-beta.32",
+    "nuxt": "2.11.0",
     "require-extension-hooks": "0.3.3",
     "require-extension-hooks-babel": "1.0.0",
     "require-extension-hooks-vue": "0.4.2",
-    "babel-plugin-webpack-alias-7": "0.1.1",
+    "sass-loader": "8.0.2",
+    "spectron": "10.0.1",
+    "vue-devtools": "5.1.3",
     "webpack": "4.42.0",
     "webpack-node-externals": "1.7.2"
   },
   "dependencies": {
+    "moment": "^2.24.0",
     "simple-git": "^1.132.0"
   }
 }
