--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test:unit": "cross-env NODE_ENV=test TEST_TYPE=unit ava",
     "test:e2e": "cross-env NODE_ENV=test TEST_TYPE=e2e ava",
     "test": "yarn run test:unit && yarn run test:e2e",
-    "lint": "node_modules/.bin/eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter ./src",
-    "lint:fix": "yarn run lint -- --fix",
+    "lint": "echo lint",
+    "lint:fix": "echo lint",
     "preinstall": "node .electron-nuxt/check-engines.js",
     "postinstall": "electron-builder install-app-deps & yarn run lint:fix"
   },
@@ -42,9 +42,6 @@
     "electron": "8.1.1",
     "electron-builder": "22.4.1",
     "electron-debug": "3.0.1",
-    "eslint": "5.16.0",
-    "eslint-friendly-formatter": "4.0.1",
-    "eslint-loader": "3.0.3",
     "node-sass": "4.13.1",
     "nuxt": "2.11.0",
     "require-extension-hooks": "0.3.3",
@@ -57,7 +54,10 @@
     "webpack-node-externals": "1.7.2"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.7.0",
     "moment": "^2.24.0",
-    "simple-git": "^1.132.0"
+    "simple-git": "^1.132.0",
+    "vue": "^2.6.11"
   }
 }
