Testing yarn version during build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,8 @@ jobs:
         with:
           node-version: 12
 
+      -run: yarn --version
+
       - name: Build/release Electron app
         uses: michalzaq12/action-electron-nuxt@v1
         with:
